--- a/RVFS/static/css/app.css
+++ b/RVFS/static/css/app.css
@@ -432,6 +432,10 @@ CATALOG
     height: 250px;
 }
 
+.del-button {
+    padding-top: 30px;
+}
+
 /* ***************************************************************************
 ACCOUNT
 *************************************************************************** */
