--- a/RVFS/RVFS/templates/rvfsite/about.html
+++ b/RVFS/RVFS/templates/rvfsite/about.html
@@ -12,7 +12,7 @@ About
 Our Burien workshop is crewed by a team of designers and artisans who will help you bring your creations to life. We offer a variety of metalworking services out of our forge and fabrication shops, including made-to-order custom fabrication, maintenance and repair of metalwork items, removal of scrap metal and materials in addition to a catalog of pre-made metal tools and artwork. Our capabilities as a shop are constantly advancing as we add new tools to our shops and new skills to our repertoire to refine our craft and our wares.
 </p>
 <p class="text-standard about-text">
-Our crew consists of Muninn and Huginn Ravenmoore, the owner and manager of RVFM respectively, along with Gordon Baylock out in the shop. When you arrive, you will likely meet with Huginn if Muninn is out in the shop with Gordon to place your order or consult on your design. From there, Muninn and Gordon will work to fabricate your design and have it ready for you to pick up from the shop. You might even meet Isis the shop dog, too!
+Our crew consists of Muninn and Huginn Ravenmoore, the owner and manager of RVFM respectively, along with Gordon Blaylock out in the shop. When you arrive, you will likely meet with Huginn if Muninn is out in the shop with Gordon to place your order or consult on your design. From there, Muninn and Gordon will work to fabricate your design and have it ready for you to pick up from the shop. You might even meet Isis the shop dog, too!
 </p>
 <p class="text-standard about-text">
 Take a look in the shop Gallery for a glimpse at where the magic happens!
