Major updates almost done with service based elements and cart changes. Down to emails and schedualing.

--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -194,6 +194,7 @@ $('input.single-checkbox').on('change', function(evt) {
   }
 });
   </script>
+  <script src="{% static 'js/add_swap.js' %}"></script>
   {% block js %}
   {% endblock %}
 </body>
