--- a/RVFS/catalog/templates/cart.html
+++ b/RVFS/catalog/templates/cart.html
@@ -97,14 +97,6 @@
                             <a class="acc-item-link" href="{% url 'prod' item.item_id %}"><h4 class="text-standard">{{ item.item.name }}</h4></a>
                         </div>
                         <div class="col">
-                            <label class="text-standard">Quantity:</label>
-                            <select name="{{ item.count }}" onchange="updatecart(this.value, this.name)">
-                                <option value="1" {% if item.quantity == '1' %}selected{% endif %}>1</option>
-                                <option value="2" {% if item.quantity == '2' %}selected{% endif %}>2</option>
-                                <option value="3" {% if item.quantity == '3' %}selected{% endif %}>3</option>
-                                <option value="4" {% if item.quantity == '4' %}selected{% endif %}>4</option>
-                                <option value="5" {% if item.quantity == '5' %}selected{% endif %}>5</option>
-                            </select>
                             {% for field, value in item.items %}
                                 {% if field in item_fields %}
                                 <h5 class="text-standard">{{ field }}: {{ value }}</h5>
@@ -132,14 +124,6 @@
                             <a class="acc-item-link" href="{% url 'prod' item.item_id %}"><h4 class="text-standard">{{ item.item.name }}</h4></a>
                         </div>
                         <div class="col">
-                            <label class="text-standard">Quantity:</label>
-                            <select name="{{ item.count }}" onchange="updatecart(this.value, this.name)">
-                                <option value="1" {% if item.quantity == '1' %}selected{% endif %}>1</option>
-                                <option value="2" {% if item.quantity == '2' %}selected{% endif %}>2</option>
-                                <option value="3" {% if item.quantity == '3' %}selected{% endif %}>3</option>
-                                <option value="4" {% if item.quantity == '4' %}selected{% endif %}>4</option>
-                                <option value="5" {% if item.quantity == '5' %}selected{% endif %}>5</option>
-                            </select>
                             {% for field, value in item.items %}
                                 {% if field in item_fields %}
                                 <h5 class="text-standard">{{ field }}: {{ value }}</h5>
@@ -179,19 +163,22 @@
             {% endif %}
         </h3>
     </div>
-    {% if account.cart_total %}
+    {% if account.cart_total or serv_address %}
     <div id="shipping">
     <img class="dividor" src="{% static 'arrow-divider.png' %}">
-    <h2 class="text-standard">Shipping Info:</h2>
     <div class="row acc-row">
+        {% if account.cart_total %}
         <ul class="col">
+        <h2 class="text-standard">Shipping Info:</h2>
         {% if user.is_authenticated %}
             {% if alt_add %}
             <li class="account-list">
             <label class="text-standard">Address:</label>
-            <select id="address_name" name="address_name">
+            <select id="ship_address_name" name="ship_address_name">
                 {% for add in alt_add %}
-                    {% if add.main %}
+                    {% if not ship_exists and add.main %}
+                    <option value="{{ add }}" selected="selected">{{ add.name }}</option>
+                    {% elif ship_exists and add.id == ship_exists %}
                     <option value="{{ add }}" selected="selected">{{ add.name }}</option>
                     {% else %}
                     <option value="{{ add }}">{{ add.name }}</option>
@@ -204,44 +191,108 @@
         <li class="account-list">
         <label class="text-standard">First Name:</label>
         <br>
-        <input id="first_name" type="text" name="first_name" value="{% if info %}{{ info.first }}{% endif %}">
+        <input id="first_name" type="text" name="ship_first_name" value="{% if info %}{{ info.first }}{% endif %}">
         </li>
         <li class="account-list">
         <label class="text-standard">Last Name:</label>
         <br>
-        <input id="last_name" type="text" name="last_name" value="{% if info %}{{ info.last }}{% endif %}">
+        <input id="last_name" type="text" name="ship_last_name" value="{% if info %}{{ info.last }}{% endif %}">
         </li>
         <li class="account-list">
         <label class="text-standard">Email:</label>
         <br>
-        <input id="email" type="text" name="email" value="{% if info %}{{ info.email }}{% endif %}">
+        <input id="email" type="text" name="ship_email" value="{% if info %}{{ info.email }}{% endif %}">
         </li>
         <li class="account-list">
         <label class="text-standard">Address Line 1:</label>
         <br>
-        <input id="add_1" type="text" name="add_1" value="{% if shipping %}{{ shipping.address1 }}{% endif %}">
+        <input id="ship_add_1" type="text" name="ship_add_1" value="{% if shipping %}{{ shipping.address1 }}{% endif %}">
         </li>
         <li class="account-list">
         <label class="text-standard">Address Line 2:</label>
         <br>
-        <input id="add_2" type="text" name="add_2" value="{% if shipping %}{{ shipping.address2 }}{% endif %}">
+        <input id="ship_add_2" type="text" name="ship_add_2" value="{% if shipping %}{{ shipping.address2 }}{% endif %}">
         </li>
         <li class="account-list">
         <label class="text-standard">City:</label>
         <br>
-        <input id="city" type="text" name="city" value="{% if shipping %}{{ shipping.city }}{% endif %}">
+        <input id="ship_city" type="text" name="ship_city" value="{% if shipping %}{{ shipping.city }}{% endif %}">
         </li>
         <li class="account-list">
         <label class="text-standard">State:</label>
         <br>
-        <input id="state" type="text" name="state" value="{% if shipping %}{{ shipping.state }}{% endif %}">
+        <input id="ship_state" type="text" name="ship_state" value="{% if shipping %}{{ shipping.state }}{% endif %}">
         </li>
         <li class="account-list">
         <label class="text-standard">Zip Code:</label>
         <br>
-        <input id="zip" type="text" name="zip" value="{% if shipping %}{{ shipping.zip_code }}{% endif %}">
+        <input id="ship_zip" type="text" name="ship_zip" value="{% if shipping %}{{ shipping.zip_code }}{% endif %}">
         </li>
         </ul>
+        {% endif %}
+        {% if serv_address %}
+        <ul class="col">
+        <h2 class="text-standard">Service Address:</h2>
+        {% if user.is_authenticated %}
+            {% if alt_add %}
+            <li class="account-list">
+            <label class="text-standard">Address:</label>
+            <select id="serv_address_name" name="serv_address_name">
+                {% for add in alt_add %}
+                    {% if not serv_exists and add.main %}
+                    <option value="{{ add }}" selected="selected">{{ add.name }}</option>
+                    {% elif serv_exists and add.id == serv_exists %}
+                    <option value="{{ add }}" selected="selected">{{ add.name }}</option>
+                    {% else %}
+                    <option value="{{ add }}">{{ add.name }}</option>
+                    {% endif %}
+                {% endfor %}
+            </select>
+            </li>
+            {% endif %}
+        {% endif %}
+        <li class="account-list">
+        <label class="text-standard">First Name:</label>
+        <br>
+        <input id="first_name" type="text" name="serv_first_name" value="{% if serv_info %}{{ serv_info.first }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Last Name:</label>
+        <br>
+        <input id="last_name" type="text" name="serv_last_name" value="{% if serv_info %}{{ serv_info.last }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Email:</label>
+        <br>
+        <input id="email" type="text" name="serv_email" value="{% if serv_info %}{{ serv_info.email }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Address Line 1:</label>
+        <br>
+        <input id="serv_add_1" type="text" name="serv_add_1" value="{% if serv_add %}{{ serv_add.address1 }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Address Line 2:</label>
+        <br>
+        <input id="serv_add_2" type="text" name="serv_add_2" value="{% if serv_add %}{{ serv_add.address2 }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">City:</label>
+        <br>
+        <input id="serv_city" type="text" name="serv_city" value="{% if serv_add %}{{ serv_add.city }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">State:</label>
+        <br>
+        <input id="serv_state" type="text" name="serv_state" value="{% if serv_add %}{{ serv_add.state }}{% endif %}">
+        </li>
+        <li class="account-list">
+        <label class="text-standard">Zip Code:</label>
+        <br>
+        <input id="serv_zip" type="text" name="serv_zip" value="{% if serv_add %}{{ serv_add.zip_code }}{% endif %}">
+        </li>
+        </ul>
+        {% endif %}
     </div>
     <div class="w-100 d-flex">
         <input class="btn btn-secondary text-standard ml-auto" type="submit" name="check" value="Continue to Checkout">
@@ -254,7 +305,6 @@
 {% if alt_add %}
 {% block js %}
 
-<script src="{% static 'js/add_swap.js' %}"></script>
 <script src="{% static 'js/update_cart.js' %}"></script>
 
 {% endblock %}
