adding in the contact page

--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -138,6 +138,10 @@
         </nav>
         <img class="dividor" src="{% static 'arrow-divider.png' %}">
         {% block body %}
+          {% block contact-title %}
+            {% endblock %}
+            {% block contact %}
+            {% endblock %}
         {% endblock %}
         <img class="dividor" src="{% static 'arrow-divider.png' %}">
           <div class="row">
