--- a/RVFS/static/css/app.css
+++ b/RVFS/static/css/app.css
@@ -437,6 +437,22 @@ CATALOG
 }
 
 /* ***************************************************************************
+CONTACT
+*************************************************************************** */
+
+#contact-form {
+    text-align: center;
+}
+
+#contact-form h1 {
+
+}
+
+#contact-form form{
+
+}
+
+/* ***************************************************************************
 ACCOUNT
 *************************************************************************** */
 
