adding in the contact email backend

--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -153,7 +153,7 @@
               <h6 class="footer-info text-standard">United States</h6>
             </div>
             <div class="col">
-              <h5 class="footer-info text-standard">Contact</h5>
+              <h5 class="footer-info text-standard"><a href="email/">Contact</a></h5>
               <hr class="footer-break">
               <h6 class="footer-info text-standard">(206)-372-6501</h6>
             </div>
