--- a/RVFS/static/css/app.css
+++ b/RVFS/static/css/app.css
@@ -436,6 +436,15 @@ CATALOG
     padding-top: 30px;
 }
 
+.image-links {
+    color: rgba(0, 0, 0, 0.9);
+}
+
+.image-links:hover {
+    color: rgba(0, 0, 0, 0.7);
+    text-decoration: none;
+}
+
 /* ***************************************************************************
 ACCOUNT
 *************************************************************************** */
