--- a/RVFS/account/templates/order.html
+++ b/RVFS/account/templates/order.html
@@ -9,68 +9,115 @@
         {% csrf_token %}
         <h2>Order Content:</h2>
         <ul class="row acc-list-row">
-        {% for item in content %}
-            {% if forloop.counter0|mod:4 == 0 %}
+        {% for item in prods %}
+            {% if forloop.counter0|mod:4 == 0 and forloop.counter0 > 0 %}
             </ul>
             <ul class="row acc-list-row">
                 <li class="card account-list">
-                    <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
-                        <div class="row">
-                            <div class="col">
-                                {% thumbnail item.item.image "100x100" crop="center" as pic %}
-                                <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
-                                {% endthumbnail %}
-                            </div>
-                            <div class="col">
-                                {% for field, value in item.items %}
-                                    {% if field == 'item' %}
-                                    <h4 class="text-standard">{{ value }}</h4>
-                                    {% elif field in item_fields %}
-                                    <h5 class="text-standard">{{ field }}: {{ value }}</h5>
-                                    {% endif %}
-                                {% endfor %}
-                                {% if item.type == 'prod' %}
-                                    <h5 class="text-standard">${{ item.item.price }} per unit</h5>
-                                {% else %}
-                                    {% if item.item.price_range %}
-                                        <h5 class="text-standard">${{ item.item.price_range }}</h5>
-                                    {% else %}
-                                        <h5 class="text-standard">${{ item.item.commission_fee }}</h5>
-                                    {% endif %}
-                                {% endif %}
-                            </div>
+                    <div class="row">
+                        <div class="col">
+                            {% thumbnail item.item.image "100x100" crop="center" as pic %}
+                            <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
+                            {% endthumbnail %}
+                            <a class="acc-item-link" href="{% url 'prod' item.item_id %}"><h4 class="text-standard">{{ item.item.name }}</h4></a>
                         </div>
-                    </a>
+                        <div class="col">
+                            {% for field, value in item.items %}
+                                {% if field in item_fields %}
+                                <h5 class="text-standard">{{ field }}: {{ value }}</h5>
+                                {% endif %}
+                            {% endfor %}
+                            <h5 class="text-standard">${{ item.item.price }} per unit</h5>
+                        </div>
+                    </div>
                 </li>
             {% else %}
                 <li class="card account-list">
-                    <a class="acc-item-link" href="{% url 'prod' item.item_id %}">
-                        <div class="row">
-                            <div class="col">
-                                {% thumbnail item.item.image "100x100" crop="center" as pic %}
-                                    <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
-                                {% endthumbnail %}
-                            </div>
-                            <div class="col">
-                                {% for field, value in item.items %}
-                                    {% if field == 'item' %}
-                                    <h4 class="text-standard">{{ value.name }}</h4>
-                                    {% elif field in item_fields %}
+                    <div class="row">
+                        <div class="col">
+                            {% thumbnail item.item.image "100x100" crop="center" as pic %}
+                                <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
+                            {% endthumbnail %}
+                            <a class="acc-item-link" href="{% url 'prod' item.item_id %}"><h4 class="text-standard">{{ item.item.name }}</h4></a>
+                        </div>
+                        <div class="col">
+                            {% for field, value in item.items %}
+                                {% if field in item_fields %}
+                                <h5 class="text-standard">{{ field }}: {{ value }}</h5>
+                                {% endif %}
+                            {% endfor %}
+                            <h5 class="text-standard">${{ item.item.price }} per unit</h5>
+                        </div>
+                    </div>
+                </li>
+            {% endif %}
+        {% endfor %}
+        {% for item in servs %}
+            {% if forloop.counter0|mod:4 == 0 and forloop.counter0 > 0 %}
+            </ul>
+            <ul class="row acc-list-row">
+                <li class="card account-list">
+                    <div class="row">
+                        <div class="col">
+                            {% thumbnail item.item.image "100x100" crop="center" as pic %}
+                            <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
+                            {% endthumbnail %}
+                            <a class="acc-item-link" href="{% url 'serv' item.item_id %}"><h4 class="text-standard">{{ item.item.name }}</h4></a>
+                        </div>
+                        <div class="col">
+                            {% for field, value in item.items %}
+                                {% if field in item_fields %}
+                                    {% if field == 'files' %}
+                                    <h5 class="text-standard">{{ field }}:<ul>
+                                        {% for file in value %}
+                                        <li class="footer-info"><a class="image-links" href="{{ file.image.url }}">image {{ forloop.counter }}</a></li>
+                                        {% endfor %}
+                                    </ul>
+                                    </h5>
+                                    {% else %}
                                     <h5 class="text-standard">{{ field }}: {{ value }}</h5>
                                     {% endif %}
-                                {% endfor %}
-                                {% if item.type == 'prod' %}
-                                    <h5 class="text-standard">${{ item.item.price }} per unit</h5>
-                                {% else %}
-                                    {% if item.item.price_range %}
-                                        <h5 class="text-standard">${{ item.item.price_range }}</h5>
+                                {% endif %}
+                            {% endfor %}
+                            {% if item.item.price_range %}
+                                <h5 class="text-standard">${{ item.item.price_range }} range</h5>
+                            {% else %}
+                                <h5 class="text-standard">${{ item.item.commission_fee }} fee</h5>
+                            {% endif %}
+                        </div>
+                    </div>
+                </li>
+            {% else %}
+                <li class="card account-list">
+                    <div class="row">
+                        <div class="col">
+                            {% thumbnail item.item.image "100x100" crop="center" as pic %}
+                                <img src="{{ pic.url }}" width="{{ pic.width }}" height="{{ pic.height }}">
+                            {% endthumbnail %}
+                            <a class="acc-item-link" href="{% url 'serv' item.item_id %}"><h4 class="text-standard">{{ item.item.name }}</h4></a>
+                        </div>
+                        <div class="col">
+                            {% for field, value in item.items %}
+                                {% if field in item_fields %}
+                                    {% if field == 'files' %}
+                                    <h5 class="text-standard">{{ field }}:<ul>
+                                        {% for file in value %}
+                                        <li class="footer-info"><a class="image-links" href="{{ file.image.url }}">image {{ forloop.counter }}</a></li>
+                                        {% endfor %}
+                                    </ul>
+                                    </h5>
                                     {% else %}
-                                        <h5 class="text-standard">${{ item.item.commission_fee }}</h5>
+                                    <h5 class="text-standard">{{ field }}: {{ value }}</h5>
                                     {% endif %}
                                 {% endif %}
-                            </div>
+                            {% endfor %}
+                            {% if item.item.price_range %}
+                                <h5 class="text-standard">${{ item.item.price_range }} range</h5>
+                            {% else %}
+                                <h5 class="text-standard">${{ item.item.commission_fee }} fee</h5>
+                            {% endif %}
                         </div>
-                    </a>
+                    </div>
                 </li>
             {% endif %}
         {% endfor %}
