Fixed up the contact form.

--- a/RVFS/RVFS/templates/rvfsite/base.html
+++ b/RVFS/RVFS/templates/rvfsite/base.html
@@ -83,6 +83,7 @@
               <ul class="nav navbar-nav ml-auto">
                 <li class="nav-item text-standard {% if nbar == 'home' %}active{% endif %}"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                 <li class="nav-item text-standard {% if nbar == 'about' %}active{% endif %}"><a class="nav-link" href="{% url 'about' %}">About</a></li>
+                <li class="nav-item text-standard {% if nbar == 'contact' %}active{% endif %}"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
                 <li class="nav-item text-standard {% if nbar == 'prods' %}active{% endif %}"><a class="nav-link" href="{% url 'prods' %}">Products</a></li>
                 <li class="nav-item text-standard {% if nbar == 'servs' %}active{% endif %}"><a class="nav-link" href="{% url 'servs' %}">Services</a></li>
                 <li class="nav-item text-standard dropdown {% if nbar == 'gallery' %}active{% endif %}">
