--- a/RVFS/account/templates/change_address.html
+++ b/RVFS/account/templates/change_address.html
@@ -4,7 +4,7 @@
 {% block title %}Change Address{% endblock %}
 
 {% block body %}
-    <form enctype="multipart/form-data" class="prod-form" method="post">
+    <form enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <div class="row">
         {% for address in addresses %}
