--- a/RVFS/account/templates/edit_account.html
+++ b/RVFS/account/templates/edit_account.html
@@ -3,7 +3,7 @@
 {% block title %}Edit Your Account{% endblock %}
 
 {% block body %}
-    <form enctype="multipart/form-data" class="prod-form" method="post">
+    <form enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <div class="row acc-form">
             <div class="col">
