--- a/RVFS/account/templates/order.html
+++ b/RVFS/account/templates/order.html
@@ -5,7 +5,7 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
-    <form enctype="multipart/form-data" class="prod-form" method="post">
+    <form enctype="multipart/form-data" method="post">
         {% csrf_token %}
         <h2>Order Content:</h2>
         <ul class="row acc-list-row">
